atual do code principal

--- a/Index.html
+++ b/Index.html
@@ -23,6 +23,7 @@
                         <a href="Index.html">Home</a> |
                         <a href="Joao.html">Página Inicial do Ícaro</a> |
                         <a href="Ícaro.html">Página Inicial do João</a> | 
+                        <a href="IndividualJuliana.html">Página Inicial da Juliana</a> | 
                     </ul>
     </section>
 
