--- a/IndividualJuliana.html
+++ b/IndividualJuliana.html
@@ -56,7 +56,7 @@
         <!--Rodapé com 5 links-->
         <h3>=================================================================================================================================================================================================</h3>
         Contato: 
-        <a href="http://127.0.0.1:5500/Contato.html"><strong>clique aqui</strong></a> 
+        <a href="http://127.0.0.1:5501/ContatoJuliana.html"><strong>clique aqui</strong></a> 
         &emsp;
         Instagram: 
         <a href="https://www.instagram.com/ju_atds/"><strong>clique aqui</strong></a> 
@@ -65,7 +65,7 @@
         <a href="http://127.0.0.1:5500/Contato.html"><strong>clique aqui</strong></a> 
         &emsp;
         Página Inicial: 
-        <a href="http://127.0.0.1:5500/Principal.html"><strong>clique aqui</strong></a> 
+        <a href="http://127.0.0.1:5501/Index.html"><strong>clique aqui</strong></a> 
         &emsp;
     </p>
  </body>
