--- a/ContatoJuliana.html
+++ b/ContatoJuliana.html
@@ -37,5 +37,20 @@
          &ensp;\____________/
            
     </article>
+
+     <!--Rodapé com 5 links-->
+     <h3>=================================================================================================================================================================================================</h3>
+     Contato: 
+     <a href="http://127.0.0.1:5501/ContatoJuliana.html"><strong>clique aqui</strong></a> 
+     &emsp;
+     Instagram: 
+     <a href="https://www.instagram.com/ju_atds/"><strong>clique aqui</strong></a> 
+     &emsp;
+     GitLab: 
+     <a href="http://127.0.0.1:5500/Contato.html"><strong>clique aqui</strong></a> 
+     &emsp;
+     Página Inicial: 
+     <a href="http://127.0.0.1:5501/Index.html"><strong>clique aqui</strong></a> 
+     &emsp;
  </body>
  </html>
